[package]
authors = ["KInterface <koyama10032009@outlook.jp>"]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead             = "0.4.3"
chacha20poly1305 = "0.9.0"
rand_chacha      = "*"
js-sys           = "0.3.40"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
getrandom = { version = "0.2", features = ["js"] }
p256 = { version = "0.10.1", features=["ecdh"] }
argon2 = { version = "0.3", features=["alloc"] }
rand_core = { version = "0.6.3", features = ["std"] }
elliptic-curve = {version = "0.11.12", features = ["sec1"] }
anyhow = "1.0"

[dependencies.web-sys] 
features = [
  'Window',
    'console',
]
version = "0.3.40"
[lib]
crate-type = ["cdylib", "rlib"]

